[package]
name = "urcu2-cds-sys"
description = "Bindings to liburcu-cds"
homepage = "https://gitlab.com/gabrielpolloguilbert/urcu"
repository = "https://gitlab.com/gabrielpolloguilbert/urcu"
license = "GPL-3.0-or-later"
version = "0.1.1-pre"
edition = "2021"

[lib]
name = "urcu_cds_sys"

[package.metadata.docs.rs]
features = ["static"]

[package.metadata.pkg-config]
liburcu-cds = "0.14"

[dependencies]
libc = { version = "0.2", features = ["extra_traits"] }
urcu2-sys = { version = "0.1.9-pre", path = "../urcu-sys" }

[build-dependencies]
bindgen = { version = "0.69", features = ["experimental"] }
cc = "1"
metadeps = "1"
urcu2-src = { version = "0.1.7", path = "../urcu-src"  }

[features]
default = []
static = ["urcu2-src/static"]
