[package]
name = "urcu2-memb-sys"
description = "Bindings to liburcu-memb"
license = "GPL-3.0-or-later"
version = "0.1.1"
edition = "2021"

[lib]
name = "urcu_memb_sys"

[package.metadata.docs.rs]
features = ["static"]

[package.metadata.pkg-config]
liburcu-memb = "0.14"

[dependencies]
urcu2-sys = { version = "0.1.6", path = "../urcu-sys" }

[build-dependencies]
bindgen = "0.69"
metadeps = "1"
urcu2-src = { version = "0.1.3", path = "../urcu-src" }

[features]
default = []
static = ["urcu2-src/static"]