[package]
name = "urcu-qsbr-sys"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[package.metadata.pkg-config]
liburcu-qsbr = "0.14"

[dependencies]
urcu-sys = { path = "../urcu-sys" }

[build-dependencies]
bindgen = "0.69"
metadeps = "1"
urcu-src = { path = "../urcu-src" }

[features]
default = []
debug = []
static = ["urcu-src/static"]