[package]
name = "urcu2-qsbr-sys"
description = "Bindings to liburcu-qsbr"
homepage = "https://gitlab.com/gabrielpolloguilbert/urcu"
repository = "https://gitlab.com/gabrielpolloguilbert/urcu"
license = "GPL-3.0-or-later"
version = "0.1.2"
edition = "2021"

[lib]
name = "urcu_qsbr_sys"

[package.metadata.docs.rs]
features = ["static"]

[package.metadata.pkg-config]
liburcu-qsbr = "0.14"

[dependencies]
urcu2-sys = { version = "0.1.8", path = "../urcu-sys" }

[build-dependencies]
bindgen = "0.69"
metadeps = "1"
urcu2-src = { version = "0.1.6", path = "../urcu-src" }

[features]
default = []
debug = []
static = ["urcu2-src/static"]