[package]
name = "urcu2-src"
description = "Redistribution of liburcu as a crate"
homepage = "https://gitlab.com/gabrielpolloguilbert/urcu"
repository = "https://gitlab.com/gabrielpolloguilbert/urcu"
license = "LGPL-2.1-only"
version = "0.1.7+0.14.1"
edition = "2021"
exclude = [
    "/vendor/configure~",
    "/vendor/include/config.h.in~",
]

[lib]
name = "urcu_src"

[package.metadata.docs.rs]
features = ["static"]

[dependencies]
bindgen = { version = "0.69", features = ["experimental"] }
cc = "1"

[build-dependencies]
autotools = { version = "0.2", optional = true }

[features]
default = []
static = ["autotools"]