[package]
name = "urcu2"
description = "Safe API to liburcu"
license = "GPL-3.0-or-later"
version = "0.1.1"
edition = "2021"

[lib]
name = "urcu"
doctest = false

[package.metadata.docs.rs]
features = ["static"]

[dependencies]
anyhow = "1"
container_of = "0.5"
guardian = "1"
libc = "0.2"
log = "0.4"
paste = "1"
static_assertions = "1"
urcu2-bp-sys = { version = "0.1.3", path = "../urcu-bp-sys", optional = true }
urcu2-mb-sys = { version = "0.1.2", path = "../urcu-mb-sys", optional = true }
urcu2-memb-sys = { version = "0.1.1", path = "../urcu-memb-sys", optional = true }
urcu2-qsbr-sys = { version = "0.1.1", path = "../urcu-qsbr-sys", optional = true }
urcu2-sys = { version = "0.1.6", path = "../urcu-sys" }

[dev-dependencies]
ctrlc = "3"
env_logger = "0.11"
rand = "0.8"

[features]
default = [ "flavor-bp", "flavor-mb", "flavor-memb", "flavor-qsbr" ]
flavor-bp = ["dep:urcu2-bp-sys"]
flavor-mb = ["dep:urcu2-mb-sys"]
flavor-memb = ["dep:urcu2-memb-sys"]
flavor-qsbr = ["dep:urcu2-qsbr-sys"]
static = [
    "urcu2-bp-sys/static",
    "urcu2-mb-sys/static",
    "urcu2-memb-sys/static",
    "urcu2-qsbr-sys/static",
    "urcu2-sys/static",
]

